[gd_scene load_steps=8 format=3 uid="uid://c53oi6f3vmasn"]

[ext_resource type="Script" uid="uid://bgros10ma87ck" path="res://scripts/begin_scene.gd" id="1_u0j4m"]
[ext_resource type="FontFile" uid="uid://dt7l5rfwhbhf" path="res://assets/font/AlimamaDongFangDaKai-Regular.ttf" id="2_r6kj7"]
[ext_resource type="Theme" uid="uid://g30aski2oekw" path="res://theme/themes/main_theme.tres" id="3_ncs0v"]
[ext_resource type="PackedScene" uid="uid://c5mo4w71cnmo1" path="res://scenes/UI/button_with_sound.tscn" id="4_w52au"]

[sub_resource type="Animation" id="Animation_r6kj7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-324, 303)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(353, -362)]
}

[sub_resource type="Animation" id="Animation_ncs0v"]
resource_name = "begin"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-324, 303), Vector2(0, 303)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(353, -362), Vector2(353, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3ws4"]
_data = {
&"RESET": SubResource("Animation_r6kj7"),
&"begin": SubResource("Animation_ncs0v")
}

[node name="main_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0j4m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.972549, 0.882353, 0.905882, 0.4)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -607.0
offset_top = -362.0
offset_right = 607.0
offset_bottom = 6.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.521569, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 25
theme_override_constants/shadow_offset_y = 15
theme_override_fonts/font = ExtResource("2_r6kj7")
theme_override_font_sizes/font_size = 300
text = "勇闯天涯"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.573
anchor_bottom = 0.573
offset_left = -324.0
offset_top = -315.84
offset_right = -3.0
offset_bottom = 450.16
grow_vertical = 2
scale = Vector2(1.04844, 1.0123)
theme = ExtResource("3_ncs0v")

[node name="MainContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 5

[node name="begin" parent="CenterContainer/MainContainer" instance=ExtResource("4_w52au")]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_type_variation = &"ButtonPrimaryPlain"
theme_override_font_sizes/font_size = 36
text = "begin"

[node name="content" parent="CenterContainer/MainContainer" instance=ExtResource("4_w52au")]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_type_variation = &"ButtonPrimaryPlain"
theme_override_font_sizes/font_size = 36
text = "content"

[node name="set" parent="CenterContainer/MainContainer" instance=ExtResource("4_w52au")]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_type_variation = &"ButtonPrimaryPlain"
theme_override_font_sizes/font_size = 36
text = "set"

[node name="exit" parent="CenterContainer/MainContainer" instance=ExtResource("4_w52au")]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_type_variation = &"ButtonPrimaryPlain"
theme_override_font_sizes/font_size = 36
text = "exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y3ws4")
}
autoplay = "begin"

[connection signal="pressed" from="CenterContainer/MainContainer/begin" to="." method="_on_begin_pressed"]
[connection signal="pressed" from="CenterContainer/MainContainer/content" to="." method="_on_content_pressed"]
[connection signal="pressed" from="CenterContainer/MainContainer/set" to="." method="_on_set_pressed"]
[connection signal="pressed" from="CenterContainer/MainContainer/exit" to="." method="_on_exit_pressed"]
