extends Control


func _on_begin_pressed() -> void:
    SceneLoader.change_scene_with_circle("res://scenes/main_scene/select_player.tscn")
    

func _on_content_pressed() -> void:
    pass # Replace with function body.


func _on_set_pressed() -> void:
    pass # Replace with function body.


func _on_exit_pressed() -> void:
    pass # Replace with function body.
